fixed enqueue error, swap title on expand and collapse all. added new roll-your-own features force_content_collapse and content_collapse_wrapper
git-svn-id: https://plugins.svn.wordpress.org/jquery-collapse-o-matic/trunk@490543 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@
 	margin-left: 16px;
 	padding: 0px;
 }
+.content_collapse_wrapper {
+	display: none;
+}
 .collapseall, .expandall {
 	cursor: pointer;
 }
